cant quite fix format
gap a lil too big on the right, im too lazy for ts ima deal with it another time

--- a/SABAO/src/components/CardGrid/cardgrid.css
+++ b/SABAO/src/components/CardGrid/cardgrid.css
@@ -1,7 +1,9 @@
 .cards-grid {
     display: grid;
-    grid-template-columns: 1fr;
-    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1));
+    gap: 2rem;
+    width: 100%;
+    padding: 1.5rem;
 
 
     justify-content: center;
@@ -15,10 +17,12 @@
   
   @media (min-width: 1024px) {
     .cards-grid {
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(4, 2fr);
     }
   }
 
   .card-grid-wrapper {
-    min-height: 200vh;
+    display: flex;
+    justify-content: center;
+    min-height: 100vh;
   }
