--- a/SABAO/src/components/Genres/genres.css
+++ b/SABAO/src/components/Genres/genres.css
@@ -13,6 +13,6 @@
   }
 
   .scrollable-container {
-    height: 100vh;
+    height: 90vh;
     overflow-y: auto;
   }
